tests/fixtures/validate/lenient/invalid/invalid-duplicate-section.yini
^ App
title = "My App"
enabled = true

^ App	// WARNING: duplicate section name
title2 = "My App"

/END
